more work on auto module annotation processing