@@ -1,7 +1,7 @@
 /*
  * This file is part of aerogel, licensed under the MIT License (MIT).
  *
- * Copyright (c) 2021-2023 Pasqual K. and contributors
+ * Copyright (c) 2021-2024 Pasqual K. and contributors
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -22,30 +22,14 @@
  * THE SOFTWARE.
  */
 
-description = "Extension for aerogel supporting automatic binding creation compile and runtime based"
+package dev.derklaro.aerogel.auto.processing;
 
-dependencies {
-  api(projects.aerogel)
-  testImplementation(libs.lombok)
-  testImplementation(libs.javapoet)
-  testImplementation(libs.compileTesting)
+import javax.annotation.processing.ProcessingEnvironment;
+import org.jetbrains.annotations.NotNull;
+
+@FunctionalInterface
+public interface AutoEntryProcessorFactory {
+
+  @NotNull
+  AutoEntryProcessor constructProcessor(@NotNull ProcessingEnvironment environment);
 }
-
-java {
-  sourceSets["main"].java {
-    srcDir("src/processing/java")
-  }
-  sourceSets["main"].resources {
-    srcDir("src/processing/resources")
-  }
-}
-
-tasks.withType<Test> {
-  if (JavaVersion.current().isJava9Compatible) {
-    doFirst {
-      jvmArgs = listOf("--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
-    }
-  }
-}
-
-configurePublishing("java", true)
